themes/default.css
/* Container */
.cubiq-gallery {
    background:#151515;
    overflow:hidden;
    position:absolute;
    top:0;
    right:0;
    bottom:0;
    left:0;
}

.cubiq-gallery-container {
    position:absolute;
    top:5px;
    right:5px;
    bottom:5px;
    left:5px;
}

/* Full screen */
.cubiq-gallery .cubiq-gallery-fullscreen {
    width:32px;
    height:32px;
    right:5px;
    top:5px;
    border-radius:2px;
    background-position:9px -257px;
}

.cubiq-gallery:-webkit-full-screen .cubiq-gallery-fullscreen { background-position:9px -286px; }
.cubiq-gallery:-moz-full-screen .cubiq-gallery-fullscreen { background-position:9px -286px; }
.cubiq-gallery:-ms-full-screen .cubiq-gallery-fullscreen { background-position:9px -286px; }
.cubiq-gallery:-o-full-screen .cubiq-gallery-fullscreen { background-position:9px -286px; }
.cubiq-gallery:full-screen .cubiq-gallery-fullscreen { background-position:9px -286px; }

/* Image */
.cubiq-gallery .cubiq-gallery-preview {
    overflow:hidden;
    position:absolute;
    top:0;
    right:0;
    bottom:77px;
    left:0;
}

.cubiq-gallery .cubiq-gallery-preview img {
    position:absolute;
    transition:left .5s;
    -o-transition:left .5s;
    -ms-transition:left .5s;
    -moz-transition:left .5s;
    -webkit-transition:left .5s;
}

/* Caption */
.cubiq-gallery .cubiq-gallery-caption {
    position:absolute;
    bottom:5px;
    left:5px;
    padding:10px;
    letter-spacing:1px;
    line-height:1em;
    font-family:Helvetica, Arial, sans-serif;
    font-size:14px;
    color:#ffffff;
    border-radius:2px;
    background-color:#1C1C1C; /*IE<9*/
    background-color:rgba(28, 28, 28, 0.75);
    z-index:1000;
}

/* Thumbnail */
.cubiq-gallery .cubiq-gallery-thumbnails {
    overflow:hidden;
    position:absolute;
    right:0;
    bottom:0;
    left:0;
    height:72px;
    white-space:nowrap;

    margin:0;
    padding:0;
}

.cubiq-gallery .cubiq-gallery-thumbnails li {
    background:#4d4d4d;
    margin-right:5px;
    display:inline-block;

    /*IE<8*/
    *display:inline;
    zoom:1;
}

.cubiq-gallery .cubiq-gallery-thumbnails img {
    cursor:pointer;
    height:72px;
    width:96px;
    opacity:0.4;
}
.cubiq-gallery .cubiq-gallery-thumbnails img:hover,
.cubiq-gallery .cubiq-gallery-thumbnails li.cubiq-gallery-thumbactive img {
    opacity:1;
}

/* Image & thumbnail previous/next */
.cubiq-gallery .cubiq-gallery-imageprev,
.cubiq-gallery .cubiq-gallery-imagenext {
    position:absolute;
    width:44px;
    height:100%;
    top:0;
    bottom:77px;
    cursor:pointer;
    display:none; /*IE<9*/
}
.cubiq-gallery .cubiq-gallery-imageprev {
    left:0;
}
.cubiq-gallery .cubiq-gallery-imageprev a {
    background-position:9px -38px;
}
.cubiq-gallery .cubiq-gallery-imagenext {
    right:0;
}
.cubiq-gallery .cubiq-gallery-imagenext a {
    background-position:9px -67px;
}

.cubiq-gallery .cubiq-gallery-imageprev a,
.cubiq-gallery .cubiq-gallery-imagenext a {
    border-radius:2px;
    width:32px;
    height:32px;
    top:50%;
    left:50%;
    margin-top:-16px;
    margin-left:-16px;
    display:block;
}

.cubiq-gallery .cubiq-gallery-thumbprev,
.cubiq-gallery .cubiq-gallery-thumbnext {
    width:20px;
    height:72px;
    bottom:0;
    display:none;
}
.cubiq-gallery .cubiq-gallery-thumbprev {
    left:0;
    background-position:3px -89px;
}
.cubiq-gallery .cubiq-gallery-thumbnext {
    right:0;
    background-position:3px -131px;
}

/* Buttons */
.cubiq-gallery .cubiq-gallery-fullscreen:hover,
.cubiq-gallery .cubiq-gallery-imageprev a:hover,
.cubiq-gallery .cubiq-gallery-imagenext a:hover,
.cubiq-gallery .cubiq-gallery-thumbprev:hover,
.cubiq-gallery .cubiq-gallery-thumbnext:hover {
    background-color:#000000;
}

.cubiq-gallery .cubiq-gallery-fullscreen,
.cubiq-gallery .cubiq-gallery-imageprev a,
.cubiq-gallery .cubiq-gallery-imagenext a,
.cubiq-gallery .cubiq-gallery-thumbprev,
.cubiq-gallery .cubiq-gallery-thumbnext {
    background-color:#000000; /*IE<9*/
    background-color:rgba(0, 0, 0, 0.75);
    background-image:url(default.png);
    background-repeat:no-repeat;
    position:absolute;
    cursor:pointer;
}

.cubiq-gallery .cubiq-gallery-fullscreen,
.cubiq-gallery .cubiq-gallery-imageprev,
.cubiq-gallery .cubiq-gallery-imagenext {
    opacity:0;
    transition:opacity .5s;
    -o-transition:opacity .5s;
    -ms-transition:opacity .5s;
    -moz-transition:opacity .5s;
    -webkit-transition:opacity .5s;
}

.cubiq-gallery:hover .cubiq-gallery-fullscreen,
.cubiq-gallery-hasimageprev:hover .cubiq-gallery-imageprev,
.cubiq-gallery-hasimagenext:hover .cubiq-gallery-imagenext,
.cubiq-gallery-hasthumbprev .cubiq-gallery-thumbprev,
.cubiq-gallery-hasthumbnext .cubiq-gallery-thumbnext {
    display:block;
    opacity:1;
}

